--- a/Perch/templates/index.html
+++ b/Perch/templates/index.html
@@ -1,6 +1,20 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
+
+{% block body %}
+<center>
+    <h1 class="display-4" style="background: linear-gradient(to right, rgb(222, 232, 227), rgb(91, 124, 83)); font-size: 110px; -webkit-background-clip: text; background-clip: text; color: transparent; font-weight: bold;">Perch</h1>
+    <p class="lead">A restorative language learning model used to create access to understanding textual and auditory documents, whenever and wherever.</p>
+    <a class="btn btn-primary btn-lg transition-link" href="/demo" role="button">Upload</a>
+</center>
+
+   
+<img src="https://github.com/Doodoal/Img-repo/blob/main/Perch_Logo.png?raw=true" class="card-img-top" alt="Image" style="object-fit: cover; height: 300px;">
 
 
-{% block content %}
+
+
+
+
+
 
 {% endblock %}
