--- a/Perch/templates/index.html
+++ b/Perch/templates/index.html
@@ -1,19 +1,77 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<center>
-    <img src="https://raw.githubusercontent.com/Doodoal/Img-repo/main/Perch_2.0_Logo.png" class="card-img-top" alt="Image" style="object-fit: cover; height: 200px; width:200px">
-    <h1 class="display-4" style="background: linear-gradient(to right, rgb(159, 228, 243), rgb(19, 95, 126)); font-size: 110px; -webkit-background-clip: text; background-clip: text; color: transparent; font-weight: bold;">Perch</h1>
-    <p class="lead">A restorative language learning model used to create access to understanding textual and auditory documents, whenever and wherever.</p>
-    <div style="height: 40px"></div>
-    <form action="/success" method="post" enctype="multipart/form-data">
-        <input type="file" name="file"  />
-        <input type="submit" value="Upload" 
-        class="btn btn-primary btn-lg transition-link"
-        style="background:#94D6E6; padding: 10px; width: 150px; color:black; border: none; font-weight: 600;"
-        >
-    </form>
-</center>
+<div style="margin-top: -130px;">
+    <center>
+        <img src="https://raw.githubusercontent.com/Doodoal/Img-repo/main/Perch_2.0_Logo.png" class="card-img-top" alt="Image" style="object-fit: cover; height: 200px; width:200px">
+        <h1 class="display-4" style="background: linear-gradient(to right, rgb(159, 228, 243), rgb(19, 95, 126)); font-size: 110px; -webkit-background-clip: text; background-clip: text; color: transparent; font-weight: bold;">Perch</h1>
+        <div class="typewriter-container" style="height: 50px; padding: 0px; border-collapse: collapse; margin: 0px;"> 
+            <p id="typewriter-text" style="font-size: 28px; padding: 0px; border-collapse: collapse; margin: 0px; font-weight: 500;"></p>
+        </div>
+        <div style="height: 40px"></div>
+        <form action="/success" method="post" enctype="multipart/form-data">
+            <input type="file" name="file"  />
+            <input type="submit" value="Upload" 
+            class="btn btn-primary btn-lg transition-link"
+            style="background:#94D6E6; padding: 10px; width: 150px; color:black; border: none; font-weight: 600;"
+            >
+        </form>
+    </center>
+</div>
+
+<style>
+    @keyframes typewriter {
+        from { width: 0; }
+        to { width: 100%; }
+    }
+
+    .typewriter {
+        font-family: monospace;
+        overflow: hidden;
+        border-right: 3px solid black; /* Visible cursor */
+        white-space: nowrap;
+        letter-spacing: .15em;
+        animation: typewriter 4s steps(30) forwards;
+    }
+</style>
+
+<script>
+    const sentences = ["Empower learning."];
+    const typewriterText = document.getElementById("typewriter-text");
+
+    let sentenceIndex = 0;
+    let charIndex = 0;
+
+    function type() {
+        if (sentenceIndex < sentences.length) {
+            if (charIndex < sentences[sentenceIndex].length) {
+                typewriterText.innerHTML += sentences[sentenceIndex].charAt(charIndex);
+                charIndex++;
+                setTimeout(type, 100);
+            } else {
+                // Move to the next sentence after 2 seconds
+                setTimeout(erase, 2000);
+            }
+        }
+    }
+
+    function erase() {
+        if (charIndex > 0) {
+            typewriterText.innerHTML = sentences[sentenceIndex].substring(0, charIndex - 1);
+            charIndex--;
+            setTimeout(erase, 50);
+        } else {
+            sentenceIndex++;
+            if (sentenceIndex >= sentences.length) {
+                sentenceIndex = 0; // Restart the loop
+            }
+            setTimeout(type, 500);
+        }
+    }
+      
+    // Start the typewriter effect
+    type();
+</script>
 
 
 {% endblock %}
