styled main page

--- a/Perch/templates/includes/_navbar.html
+++ b/Perch/templates/includes/_navbar.html
@@ -11,7 +11,11 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="/">{{ app_data.get('project_name', 'Project Name') }}</a>
+        <a href="/"  style="text-decoration: none">
+            <img src="https://raw.githubusercontent.com/Doodoal/Img-repo/main/Perch_2.0_Logo.png" class="navbar-brand" style="height: 60px" ></img>
+            <span style="background: rgb(2, 98, 154); font-size: 25px; -webkit-background-clip: text; background-clip: text; color: transparent; font-weight: bold;">Perch</span>
+
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
