--- a/Perch/templates/index.html
+++ b/Perch/templates/index.html
@@ -36,7 +36,7 @@
 </style>
 
 <script>
-    const sentences = ["Empower learning."];
+    const sentences = ["Empower learning.", "Pitch Perch-fect."];
     const typewriterText = document.getElementById("typewriter-text");
 
     let sentenceIndex = 0;
