changing into paragraph form

--- a/Perch/templates/output.html
+++ b/Perch/templates/output.html
@@ -5,7 +5,7 @@
     <title>Output</title>
 </head>
 <body>
-    <h1>Output of Python Script:</h1>
-    <pre>{{ output }}</pre>
+    <h1>Original Transcript</h1>
+    <p>{{ output }}</p>
 </body>
 {% endblock %}
