--- a/Perch/templates/layout.html
+++ b/Perch/templates/layout.html
@@ -17,7 +17,7 @@
 
   <body>
 
-    {% include 'includes/_navbar.html' %}
+    {% include 'includes/_navBar.html' %}
 
     <main role="main" class="container">
       <div class="container">
