--- a/Perch/templates/output.html
+++ b/Perch/templates/output.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html>
+{% extends 'layout2.html' %}
+
+{% block body %}
 <head>
     <title>Output</title>
 </head>
@@ -7,4 +8,4 @@
     <h1>Output of Python Script:</h1>
     <pre>{{ output }}</pre>
 </body>
-</html>
+{% endblock %}
