--- a/Perch/templates/includes/vertical_navbar.html
+++ b/Perch/templates/includes/vertical_navbar.html
@@ -10,6 +10,7 @@
         .navbarr {
             list-style-type: none;
             display: flex;
+            row-gap: 15px;
             flex-direction: column;
             justify-content: center;
             margin: 20px;
@@ -37,10 +38,11 @@
             color: black;
             background-color: #94D6E6;
             text-align: center;
-            
+            margin-left: 20px;
+            margin-right: 20px;
             font-weight: 600;
             padding: 8px 16px;
-            margin: 20px;
+          
             height: 50px;
             text-decoration: none;
             border-radius: 12px; // Add rounded corners
