--- a/Perch/templates/output.html
+++ b/Perch/templates/output.html
@@ -3,6 +3,11 @@
 {% block body %}
 <head>
     <title>Output</title>
+
+    <script> //Select Navbar item to color here (use Ids for that)
+       var listItemToColor="";
+    </script>
+
 </head>
 <body>
     <h1>Output of Python Script:</h1>
