--- a/Perch/templates/layout2.html
+++ b/Perch/templates/layout2.html
@@ -6,7 +6,7 @@
     <meta name="description" content="{{ app_data['description'] }}">
     <meta name="keywords" content="{{ app_data['keywords'] }}">
     <meta name="author" content="{{ app_data['author'] }}">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="icon" href="https://raw.githubusercontent.com/Doodoal/Img-repo/main/Perch_2.0_Logo.png">
 
     <title>{{ app_data['html_title'] }}</title>
 
