--- a/Perch/templates/output_pages/summary.html
+++ b/Perch/templates/output_pages/summary.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <h1>Output of Python Script:</h1>
-    <pre>{{ output }}</pre>
+    <h1>Summary</h1>
+    {{ output|safe }}
 </body>
 {% endblock %}
