--- a/Perch/templates/output_pages/flashcards.html
+++ b/Perch/templates/output_pages/flashcards.html
@@ -17,37 +17,34 @@
                 <div class="card-content">
                     <div class="card-front">
                         <h2>Question 1</h2>
-                        <p>What is the capital of France?</p>
                     </div>
                     <div class="card-back">
-                        <p>Answer: Paris</p>
+                        <p>Answer: </p>
                     </div>
                 </div>
             </div>
+            <!--Flashcard 2-->
             <div class="card">
                 <div class="card-content">
                     <div class="card-front">
-                        <h2>Question 1</h2>
-                        <p>What is the capital of Germany?</p>
+                        <h2>Question 2</h2>
                     </div>
                     <div class="card-back">
-                        <p>Answer: Paris</p>
+                        <p>Answer: </p>
                     </div>
                 </div>
             </div>
+            <!--Flashcard 3-->
             <div class="card">
                 <div class="card-content">
                     <div class="card-front">
-                        <h2>Question 1</h2>
-                        <p>What is the capital of UK?</p>
+                        <h2>Question 3</h2>
                     </div>
                     <div class="card-back">
-                        <p>Answer: Paris</p>
+                        <p>Answer: </p>
                     </div>
                 </div>
             </div>
-            <!-- Flashcard 2 -->
-            <!-- Repeat for each flashcard -->
         </div>
         
         <!-- Navigation Arrows -->
