--- a/Perch/templates/index.html
+++ b/Perch/templates/index.html
@@ -9,13 +9,16 @@
             <p id="typewriter-text" style="font-size: 28px; padding: 0px; border-collapse: collapse; margin: 0px; font-weight: 500;"></p>
         </div>
         <div style="height: 40px"></div>
-        <form action="/success" method="post" enctype="multipart/form-data">
-            <input type="file" name="file"  />
-            <input type="submit" value="Upload" 
-            class="btn btn-primary btn-lg transition-link"
-            style="background:#94D6E6; padding: 10px; width: 150px; color:black; border: none; font-weight: 600;"
-            >
-        </form>
+        <div style="display: flex; justify-content: center">
+            <form style="display: flex; flex-direction: column; align-items: center;"  action="/success" method="post" enctype="multipart/form-data">
+                <input style="padding-left: 10vh;" type="file" name="file" />
+                <div style="height:20px"></div>
+                <input type="submit" value="Upload" 
+                class="btn btn-primary btn-lg transition-link"
+                style="background:#94D6E6; padding: 10px; width: 150px; color:black; border: none; font-weight: 600;"
+                >
+            </form>
+        </div>
     </center>
 </div>
 
