Upload file button

--- a/Perch/templates/index.html
+++ b/Perch/templates/index.html
@@ -1,26 +1,6 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div style="margin-top: -130px;">
-    <center>
-        <img src="https://raw.githubusercontent.com/Doodoal/Img-repo/main/Perch_2.0_Logo.png" class="card-img-top" alt="Image" style="object-fit: cover; height: 200px; width:200px">
-        <h1 class="display-4" style="background: linear-gradient(to right, rgb(159, 228, 243), rgb(19, 95, 126)); font-size: 110px; -webkit-background-clip: text; background-clip: text; color: transparent; font-weight: bold;">Perch</h1>
-        <div class="typewriter-container" style="height: 50px; padding: 0px; border-collapse: collapse; margin: 0px;"> 
-            <p id="typewriter-text" style="font-size: 28px; padding: 0px; border-collapse: collapse; margin: 0px; font-weight: 500;"></p>
-        </div>
-        <div style="height: 40px"></div>
-        <div style="display: flex; justify-content: center">
-            <form style="display: flex; flex-direction: column; align-items: center;"  action="/success" method="post" enctype="multipart/form-data">
-                <input style="padding-left: 10vh;" type="file" name="file" />
-                <div style="height:20px"></div>
-                <input type="submit" value="Upload" 
-                class="btn btn-primary btn-lg transition-link"
-                style="background:#94D6E6; padding: 10px; width: 150px; color:black; border: none; font-weight: 600;"
-                >
-            </form>
-        </div>
-    </center>
-</div>
 
 <style>
     @keyframes typewriter {
@@ -36,7 +16,48 @@
         letter-spacing: .15em;
         animation: typewriter 4s steps(30) forwards;
     }
+
+    input[type="file"] {
+    display: none;
+    }
+
+    .custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+    }
+
 </style>
+
+
+<div style="margin-top: -130px;">
+    <center>
+        <img src="https://raw.githubusercontent.com/Doodoal/Img-repo/main/Perch_2.0_Logo.png" class="card-img-top" alt="Image" style="object-fit: cover; height: 200px; width:200px">
+        <h1 class="display-4" style="background: linear-gradient(to right, rgb(159, 228, 243), rgb(19, 95, 126)); font-size: 110px; -webkit-background-clip: text; background-clip: text; color: transparent; font-weight: bold;">Perch</h1>
+        <div class="typewriter-container" style="height: 50px; padding: 0px; border-collapse: collapse; margin: 0px;"> 
+            <p id="typewriter-text" style="font-size: 28px; padding: 0px; border-collapse: collapse; margin: 0px; font-weight: 500;"></p>
+        </div>
+        <div style="height: 40px"></div>
+        <div style="display: flex; justify-content: center">
+            <form style="display: flex; flex-direction: column; align-items: center; width: 100%;"  action="/success" method="post" enctype="multipart/form-data">
+                
+                <label class="custom-file-upload">
+                    <input type="file" name="file" />
+                    Upload a file to get started
+                </label>
+
+                <div style="height:20px"></div>
+                <input type="submit" value="Upload" 
+                class="btn btn-primary btn-lg transition-link"
+                style="background:#94D6E6; padding: 10px; width: 150px; color:black; border: none; font-weight: 600;"
+                >
+            </form>
+        </div>
+    </center>
+</div>
+
+
 
 <script>
     const sentences = ["Empower learning.", "Pitch Perch-fect."];
