--- a/Perch/templates/index.html
+++ b/Perch/templates/index.html
@@ -38,13 +38,37 @@
         <div class="typewriter-container" style="height: 50px; padding: 0px; border-collapse: collapse; margin: 0px;"> 
             <p id="typewriter-text" style="font-size: 28px; padding: 0px; border-collapse: collapse; margin: 0px; font-weight: 500;"></p>
         </div>
+
+        
         <div style="height: 40px"></div>
         <div style="display: flex; justify-content: center">
             <form style="display: flex; flex-direction: column; align-items: center; width: 100%;"  action="/success" method="post" enctype="multipart/form-data">
-                
-                <label class="custom-file-upload">
-                    <input type="file" name="file" />
-                    Upload a file to get started
+
+
+                    <label class="custom-file-upload" >
+                        <input type="file" name="file" id="file-input" />
+                        <span id="file-label">
+                            Upload a file to get started
+                        </span>
+                    </label>
+
+
+                    <script>
+                        
+                        // Get the file input and label
+                        const fileInput = document.getElementById('file-input');
+                        const fileLabel = document.getElementById('file-label');
+
+                        // Listen for the change event on the file input
+                        fileInput.addEventListener('change', function() {
+                            // If a file was selected, update the label
+                            if (this.files && this.files.length > 0) {
+                                fileLabel.textContent = this.files[0].name;
+                            }
+                        });
+
+                       
+                    </script>
                 </label>
 
                 <div style="height:20px"></div>
