--- a/Perch/templates/output_pages/translate.html
+++ b/Perch/templates/output_pages/translate.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     <h1>Output of Python Script:</h1>
-    <pre>{{ output }}</pre>
+    <p>{{ output }}</p>
 </body>
 {% endblock %}
