--- a/Perch/templates/output_pages/accent.html
+++ b/Perch/templates/output_pages/accent.html
@@ -11,6 +11,10 @@
 </head>
 <body>
     <h1>Output of Python Script:</h1>
-    <pre>{{ output }}</pre>
+    <audio controls>
+        <!-- Specify the path to your MP3 file -->
+        <source src="{{ mp3_file_path }}" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 </body>
 {% endblock %}
