--- a/Perch/templates/output_pages/flashcards.html
+++ b/Perch/templates/output_pages/flashcards.html
@@ -16,10 +16,10 @@
             <div class="card">
                 <div class="card-content">
                     <div class="card-front">
-                        <h2>Question 1</h2>
+                        <h2>{{ keyword[0] }}</h2>
                     </div>
                     <div class="card-back">
-                        <p>Answer: </p>
+                        <p>{{ description[0] }}</p>
                     </div>
                 </div>
             </div>
@@ -27,10 +27,10 @@
             <div class="card">
                 <div class="card-content">
                     <div class="card-front">
-                        <h2>Question 2</h2>
+                        <h2>{{ keyword[1] }}</h2>
                     </div>
                     <div class="card-back">
-                        <p>Answer: </p>
+                        <p>{{ description[1] }}</p>
                     </div>
                 </div>
             </div>
@@ -38,10 +38,32 @@
             <div class="card">
                 <div class="card-content">
                     <div class="card-front">
-                        <h2>Question 3</h2>
+                        <h2>{{ keyword[2] }}</h2>
                     </div>
                     <div class="card-back">
-                        <p>Answer: </p>
+                        <p>{{ description[2] }}</p>
+                    </div>
+                </div>
+            </div>
+            <!--Flashcard 4-->
+            <div class="card">
+                <div class="card-content">
+                    <div class="card-front">
+                        <h2>{{ keyword[3] }}</h2>
+                    </div>
+                    <div class="card-back">
+                        <p>{{ description[3] }}</p>
+                    </div>
+                </div>
+            </div>
+            <!--Flashcard 5-->
+            <div class="card">
+                <div class="card-content">
+                    <div class="card-front">
+                        <h2>{{ keyword[4] }}</h2>
+                    </div>
+                    <div class="card-back">
+                        <p>{{ description[4] }}</p>
                     </div>
                 </div>
             </div>
