--- a/Perch/templates/output_pages/accent.html
+++ b/Perch/templates/output_pages/accent.html
@@ -10,10 +10,10 @@
 
 </head>
 <body>
-    <h1>Output of Python Script:</h1>
-    <audio controls>
+    <h1>Audio Transcript</h1>
+    <audio controls autoplay muted>
         <!-- Specify the path to your MP3 file -->
-        <source src="{{ mp3_file_path }}" type="audio/mpeg">
+        <source src="mp3_test.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 </body>
